--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,4 +1,4 @@
-name: Run Automated Tests on Multiple OS
+name: Run Automated Tests and Upload Report
 on: [push, pull_request]
 
 jobs:
@@ -21,5 +21,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install pytest
 
-      - name: Run pytest
-        run: pytest -v scripts/
+      - name: Run pytest (generate junit xml)
+        run: pytest -v scripts/ --junitxml=pytest-report.xml
+
+      - name: Upload test report artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report_${{ matrix.os }}
+          path: pytest-report.xml
